<resources>
    <!-- Fields for FirebaseUI Authentication -->
    <string name="fui_missing_first_and_last_name">@string/missing_username</string>
    <string name="fui_name_hint">@string/username_text</string>
    <string name="app_name">PinPoint</string>
    <string name="follow_text">Follow</string>
    <string name="unfollow_text">Unfollow</string>
    <string name="follow_back_text">Follow Back</string>
    <string name="pins_found_text">Pins Found</string>
    <string name="pins_dropped_text">Pins Dropped</string>
    <string name="following_text">Following</string>
    <string name="followers_text">Followers</string>
    <string name="username_text">Username</string>
    <string name="location_text">Location</string>
    <string name="bio_text">Bio</string>
    <string name="verify_email_text">Verify your account by clicking the link sent to your email.</string>
    <string name="resend_email_text">Resend email</string>
    <string name="logout_text">Log Out</string>
    <string name="map_button_text">Map Button</string>
    <string name="feed_text">Feed</string>
    <string name="leaderboard_text">Leaderboard</string>
    <string name="board_text">Found Pins</string>
    <string name="profile_text">Profile</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="activity_text">Activity</string>
    <string name="dropped_pins_text">Dropped Pins</string>
    <string name="zero">0</string>
    <string name="back_text">Back</string>
    <string name="done_text">Done</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="missing_username">Please enter a username.</string>
    <string name="profile_pic_upload_text">Profile Picture Upload</string>
    <string name="profile_pic_text">Profile Picture</string>
    <string name="location_error_text">Couldn\'t get your location. Check your location settings.</string>
    <string name="fine_location_error_text">PinPoint needs precise location permissions to drop pins.</string>
    <string name="settings_text">Settings</string>
    <string name="pin_thumbnail_text">Pin Thumbnail</string>
    <string name="pin_image_text">Pin Image</string>
    <string name="drop_pin_button_text">Drop Pin -</string>
    <string name="caption_text">Caption</string>
    <string name="pin_content_text">Write your Pin here!</string>
    <string name="new_pin_title_text">Balance:</string>
    <string name="image_text">Image</string>
    <string name="text_text">Text</string>
    <string name="empty_pin_text">You can\'t post an empty pin!</string>
    <string name="pin_author_profile_picture_text">Pin Author Profile Picture</string>
    <string name="view_pin_text">View Pin</string>
    <string name="choose_image_title">Choose Image</string>
    <string name="choose_image_dialog_message">Choose how you would like to select your image.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="file_creation_failed_message">Something went wrong taking your photo. Please try again!</string>
    <string name="drop_pin_text">Pin successfully dropped!</string>
    <string name="photo_upload_error_message">Something went wrong uploading your photo! Try again later.</string>
    <string name="found_pins_text">All</string>
    <string name="following_pins_text">Following</string>
    <string name="nfc_pin_text">NFC</string>
    <string name="landmark_pin_text">Landmark</string>
    <string name="other_pin_text">Other</string>
    <string name="undiscovered_pin_title">Undiscovered Pin</string>
    <string name="undiscovered_pin_message">Travel close to this pin and click here to reveal its contents!</string>
    <string name="insufficient_pinnies">Insufficient Pinnies</string>
    <string name="pin_fetch_error">Something went wrong fetching pins. Try again later.</string>
    <string name="activity_fetch_error">Something went wrong fetching activity. Try again later.</string>
    <string name="undiscovered_pin_not_close_enough">You have to move a bit closer to this pin to discover it!</string>
    <string name="undiscovered_pin_locked">Travel close to this pin to unlock it on the map!</string>
    <string name="feed_pin_deleted_or_undiscovered">You haven\'t yet discovered this pin or it was deleted by the author.</string>
    <string name="user_fetch_error_message">Something went wrong fetching the user! Try again later.</string>
    <string name="pin_finds_singular">1 find</string>
    <string name="pin_finds_plural">%d finds</string>
    <string name="pin_comments_singular">1 comment</string>
    <string name="pin_comments_plural">%d comments</string>
    <string name="options_text">Options</string>
    <string name="pin_delete_confirm_message">Are you sure you want to delete this pin? You will not be refunded any Pinnies for deleting a pin.</string>
    <string name="pin_delete_confirm_title">Confirm Pin Deletion</string>
    <string name="delete_text">Delete</string>
    <string name="pinnie_fetch_error_message">Something went wrong fetching your pinnies. Please try again later.</string>
    <string name="pin_cost_calc_error_message">Something went wrong calculating the pin cost. Please try again later!</string>
    <string name="nearby_place_fetch_error_message">Something went wrong fetching nearby places. Please try again later!</string>
    <string name="nearby_location_name_text">Nearby Location Name</string>
    <string name="nearby_location_name_missing_message">You must specify a nearby location name before dropping a pin!</string>
    <string name="loading_text">Loading…</string>
    <string name="no_nearby_locations_text">No nearby locations found.</string>
    <string name="nearby_place_fetch_error_message_short">Error fetching nearby locations</string>
    <string name="feed_bar_text">Feed</string>
    <string name="pin_location_icon_text">Pin Location Icon</string>
    <string name="user_rank_text">User Rank</string>
    <string name="add_a_comment">Add A Comment</string>
    <string name="unfollow_error_message">Something went wrong trying to unfollow the user. Try again later.</string>
    <string name="follow_error_message">Something went wrong trying to follow the user. Try again later.</string>
    <string name="add_comment_button_text">Add Comment Button</string>
    <string name="send_comment_button_text">Send Comment Button</string>
    <string name="comment_author_profile_pic_text">Comment Author Profile Pic</string>
    <string name="delete_account">Delete Account</string>
    <string name="account_delete_message">Are you sure you want to irreversibly delete your account? All of your profile and activity information will be deleted. Pins you have dropped and comments you have posted will remain, but they will no longer be linked to your account.</string>
    <string name="profile_location_icon_text">Profile Location Icon</string>
    <string name="pinnie_reward_message">You received %d pinnies as a reward!</string>
    <string name="deleted_user">Deleted User</string>
    <string name="activity_drop_text">%s dropped a pin %s</string>
    <string name="activity_find_text">%s found a pin %s</string>
    <string name="activity_comment_text">%s commented on a pin %s</string>
    <string name="activity_follow_text">%s followed %s</string>
    <string name="you">You</string>
    <string name="you_lowercase">you</string>
    <string name="landmark_text">Landmark</string>
    <string name="other_text">Other</string>
    <string name="nfc_text">NFC</string>
    <string name="my_pins_text">My Pins</string>
    <string name="toggle_pin_filter">Toggle Pin Filter</string>
    <string name="searching_for_sender_text">Searching for pin sender…</string>
    <string name="searching_for_recipient_text">Searching for pin recipient…</string>
    <string name="share_in_progress_text">Pin sharing in progress…</string>
    <string name="share_pin_text">Share Pin</string>
    <string name="share_complete_text">Pin sharing complete!</string>
    <string name="service_id">edu.wisc.ece.pinpoint</string>
    <string name="pin_share_exception_text">Something went wrong when trying to share pins. Please try again later.</string>
    <string name="connection_rejected_text">Connection was rejected by other user.</string>
    <string name="dropping_pin">Dropping Pin</string>
    <string name="deleting_pin">Deleting Pin</string>
    <string name="saving_profile">Saving Profile</string>
    <string name="deleting_account">Deleting Account</string>
    <string name="unlocking_pin">Unlocking Pin</string>
    <string name="pin_sharing_setup_text">Setting up pin sharing…</string>
    <string name="navigate_text">Navigate</string>
    <string name="connected_message">Connected to %s</string>
    <string name="profile_save_error">Something went wrong saving your profile. Please try again later.</string>
    <string name="confirm_account_deletion_text">Confirm Account Deletion</string>
    <string name="logout_error_message">Something went wrong logging out. Please try again later.</string>
    <string name="delete_account_error_message">Something went wrong deleting your account. Please try again later.</string>
    <string name="account_deleted_message">Your account has been deleted.</string>
    <string name="feedback_message">Thank you for using PinPoint! We really appreciate any feedback you have on problems you have ru into with the app, things you think could work better, or new feature ideas we can add!</string>
    <string name="tester_sign_in_message">Thanks for trying out our app! To provide you with the best user experience please join our testers! Your app will automatically update when we release new features or fix bugs. If you were already invited to be a tester sign in below. Otherwise reach out to us so we can add you!</string>
    <string name="welcome_message">Welcome to PinPoint!</string>
    <string name="sign_in_text">Sign In</string>
    <string name="not_right_now_text">Not right now</string>
    <string name="user_activity_empty_message">No activity yet!</string>
    <string name="no_pins_yet">No pins yet!</string>
</resources>
