<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.map.ReceiveSharedFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:translationZ="80dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/share_pin_title"
            style="@style/TextAppearance.Pinpoint.ThickText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/share_pin_text"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/share_pin_back_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/back_text"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimary" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/receive_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        android:text="@string/pin_sharing_setup_text"
        style="@style/TextAppearance.Pinpoint.Numbers"/>
    <TextView
        android:id="@+id/sender_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/receive_text"
        android:layout_marginTop="40dp"
        android:text=""
        style="@style/TextAppearance.Pinpoint.Numbers"/>

</androidx.constraintlayout.widget.ConstraintLayout>