<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.profile.EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:translationZ="80dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/edit_profile"
            style="@style/TextAppearance.Pinpoint.ThickText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/edit_profile_text"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/profile_edit_save"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/done_text"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimary" />

        <ImageButton
            android:id="@+id/profile_edit_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/back_text"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimary" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_prof_load_layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:focusable="true"
        android:translationZ="45dp"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/edit_prof_load_blur"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:translationZ="80dp"
            android:background="?attr/colorBackgroundFloating"
            android:alpha="0.7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/edit_prof_load_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorBackgroundFloating"
            android:translationZ="90dp"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/edit_prof_load_text"
                style="@style/TextAppearance.Pinpoint.ThickText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saving_profile"
                android:layout_margin="20dp"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ProgressBar
                android:id="@+id/edit_prof_progress"
                android:layout_width="wrap_content"
                android:layout_margin="20dp"
                android:layout_height="wrap_content"
                android:foregroundTint="?attr/colorOnPrimary"
                app:layout_constraintTop_toBottomOf="@+id/edit_prof_load_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <RelativeLayout
        android:id="@+id/profile_edit_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">

        <ImageView
            android:id="@+id/profile_edit_image"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="150dp"
            android:contentDescription="@string/profile_pic_upload_text"
            android:src="@drawable/ic_profile"
            android:foreground="@drawable/profile_pic_overlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >
        </ImageView>

        <TextView
            android:id="@+id/myImageViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/profile_edit_image"
            android:layout_alignTop="@id/profile_edit_image"
            android:layout_alignRight="@id/profile_edit_image"
            android:layout_alignBottom="@id/profile_edit_image"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="27dp"
            android:gravity="bottom"
            android:text="Edit Picture"
            android:textColor="@color/white"
            android:textFontWeight="700"/>


    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_img">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/profile_edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:hint="@string/username_text"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:maxLength="20"
                android:nextFocusForward="@+id/profile_edit_location" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/profile_edit_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_text"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="none"
                android:nextFocusForward="@+id/profile_edit_bio" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_edit_bio_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/profile_edit_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/bio_text"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLength="125" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>