<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pages.profile.SettingsContainerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:translationZ="80dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settings_title"
            android:text="@string/settings_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            style="@style/TextAppearance.Pinpoint.ThickText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/settings_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/back_text"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/delete_acct_load_layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:focusable="true"
        android:translationZ="45dp"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/delete_acct_load_blur"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:translationZ="80dp"
            android:background="?attr/colorBackgroundFloating"
            android:alpha="0.7"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/delete_acct_load_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorBackgroundFloating"
            android:translationZ="90dp"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/delete_acct_load_text"
                style="@style/TextAppearance.Pinpoint.ThickText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleting_account"
                android:layout_margin="20dp"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ProgressBar
                android:id="@+id/delete_acct_progress"
                android:layout_width="wrap_content"
                android:layout_margin="20dp"
                android:layout_height="wrap_content"
                android:foregroundTint="?attr/colorOnPrimary"
                app:layout_constraintTop_toBottomOf="@+id/delete_acct_load_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>